--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
     </script>
 
     <!-- Código de Google Analytics (ya debes tenerlo en tu <head>) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6FV3M5PGQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XXXXXXX'); // Reemplaza con tu ID de medición
+  gtag('config', 'G-Z6FV3M5PGQ'); // Reemplaza con tu ID de medición
 </script>
 
 <!-- Script para medir el servicio seleccionado -->
@@ -297,3 +297,4 @@
 
 </body>
 </html>
+
