--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
     </style>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6FV3M5PGQ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX'); // <-- cambia por tu Measurement ID
+      gtag('config', 'G-Z6FV3M5PGQ'); // <-- cambia por tu Measurement ID
     </script>
 </head>
 <body>
@@ -266,16 +266,7 @@
     });
     </script>
 
-    <!-- Código de Google Analytics (ya debes tenerlo en tu <head>) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6FV3M5PGQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-Z6FV3M5PGQ'); // Reemplaza con tu ID de medición
-</script>
-
-<!-- Script para medir el servicio seleccionado -->
+  <!-- Script para medir el servicio seleccionado -->
 <script>
   document.addEventListener("DOMContentLoaded", function() {
     const servicioSelect = document.querySelector("select[name='servicio']"); // Ajusta el name/id si es diferente
@@ -297,4 +288,5 @@
 
 </body>
 </html>
+
 
