--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
             </div>
         </div>
 
+        <div style="text-align:center; margin-bottom:15px;">
+        <img src="quienes.png" alt="¿Quiénes somos?" style="max-width:100%; border-radius:10px;">
+    </div>
+
         <!-- Columna derecha: Formulario -->
         <div class="formulario">
             <h2>Seleccione el servicio de su interés</h2>
@@ -288,5 +292,6 @@
 
 </body>
 </html>
+
 
 
