--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
       gtag('js', new Date());
       gtag('config', 'G-Z6FV3M5PGQ'); // <-- cambia por tu Measurement ID
     </script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-68S92BPY0L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-68S92BPY0L');
+</script>
 </head>
 <body>
     <!-- ENCABEZADO -->
@@ -289,6 +299,7 @@
 
 </body>
 </html>
+
 
 
 
