--- a/index.html
+++ b/index.html
@@ -138,24 +138,17 @@
         }
     </style>
 
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6FV3M5PGQ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-Z6FV3M5PGQ'); // <-- cambia por tu Measurement ID
-    </script>
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-68S92BPY0L"></script>
+    <!-- Google Analytics (dos IDs en el mismo bloque) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6FV3M5PGQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
+  gtag('config', 'G-Z6FV3M5PGQ');
   gtag('config', 'G-68S92BPY0L');
 </script>
+
+
 </head>
 <body>
     <!-- ENCABEZADO -->
@@ -299,6 +292,7 @@
 
 </body>
 </html>
+
 
 
 
