--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
   gtag('js', new Date());
   gtag('config', 'G-Z6FV3M5PGQ');
   gtag('config', 'G-68S92BPY0L');
+  gtag('config', 'G-7E2RQ6Y99M');
+    
 </script>
 
 
@@ -292,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
