--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
         </div>
     </div>
 
+    <a href="https://www.facebook.com/" target="_blank" rel="noopener">
+  <img src="redes.png" alt="Facebook" style="width:50px; height:auto;">
+</a>
+
     <!-- FOOTER -->
     <footer>
         © 2025 - Todos los derechos reservados | Sitio creado con fines demostrativos
@@ -295,6 +299,7 @@
 
 </body>
 </html>
+
 
 
 
