--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                 <!-- Botón enviar -->
                 <button type="submit">Solicitar</button>
             </form>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener">
+                <img src="redes.png" alt="Facebook" style="width:50px; height:auto;">
+            </a>
         </div>
     </div>
 
@@ -299,6 +302,7 @@
 
 </body>
 </html>
+
 
 
 
